--- a/exercicio.html
+++ b/exercicio.html
@@ -26,5 +26,36 @@
         </nav>
         
     </header>
+    <main>
+        <div id = "banner">
+            <div id="banner-text">
+                 <h1>Volta<span>Bolsonaro</span></h1>
+                 <p>Melhor presidente do brasil</p>
+            <a href="#">clique aqui</a>
+        </div>
+        </div>
+        <section id="texto">
+            <h1>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.  </h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div  id="banner_2">
+                <div>
+                <img src="assets/images/banner3.jpg" alt="">
+                <p>lula</p>
+             </div>    
+
+             <div>
+                <img src="assets/images/banner3.jpg" alt="">
+                <p>é</p>
+             </div>
+
+             <div>
+                <img src="assets/images/banner3.jpg" alt="">
+                <p> Ladrão</p>
+             </div>   
+            </div>         
+        </section>
+    </main>
+
 </body>
 </html>
