--- a/exercicio.html
+++ b/exercicio.html
@@ -55,6 +55,23 @@
              </div>   
             </div>         
         </section>
+        
+        <section id="banner_3">
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolorem eveniet magnam ad deleniti hic nostrum, veniam,
+                 laudantium repellat consectetur dolorum excepturi vel enim dicta a recusandae ex incidunt placeat?
+            </h1>
+            <div>
+                <img src="assets/images/banner5.jpg" alt="">
+                <div>
+                    <h1>
+                       <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa odit nostrum quidem odio. Labore id, alias cum soluta deserunt incidunt, 
+                        neque aspernatur ipsam sunt tenetur omnis, nihil distinctio necessitatibus laudantium!</p>
+                    
+                    </h1>
+                    <a href="#">clique aqui</a>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
